Added Index & About us, removed placeholder images.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
 </head>
 
+
+
+
 <body data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
 
 	<section id="navigation" data-v-save-global="index.html,#navigation">
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark bg-opacity-75 sticky-md-top ">
 		<div class="container">
 			  <div data-v-component-site>	
-					<a class="navbar-brand" href="/" data-v-url-params='{"host":"www.*.*"}'><span class="visually-hidden">Logo</span>
+					<a class="navbar-brand" href="/" data-v-url-params='{"host":"www.."}'><span class="visually-hidden">Logo</span>
 					  <!-- Logo Header -->
 						<img src="./images/icon.png" width="10%" alt="Site logo dark" size loading="lazy" class="logo-default-dark" data-v-site-logo-dark>
 					   
@@ -58,6 +61,71 @@
 	</nav>
 </section>
 
+
+<!-- Home -->
+	<section class="py-lg-18 py-md-10  py-8 bg-dark" id="home">
+	<div class="container">
+		<!--row-->
+		<div class="row d-flex align-items-center">
+			<div class="col-xl-5 col-md-6  col-lg-6 col-12">
+				<div class="mb-5 mb-md-0">
+					<!--title-->
+					<h1 class="mt-4 mb-4 display-3 fw-semibold">Welcome to Tokyo Solutions</h1>
+					<p class="mb-6 lead">With a dedicated team of experts, we are committed to delivering excellence.
+						 Let's collaborate and build something extraordinary together.</p>
+					<a href="#contactus" class="btn btn-primary">Contact Us</a>
+					<!--text-->
+				</div>
+			</div>
+			<!--col-->
+			<div class="col-xl-5 offset-xl-2 col-md-5 offset-md-1 col-lg-5 offset-lg-1  col-12">
+				<!--image-->
+				<div class="position-relative">
+					<img src="./images/Office.jpg" alt="about"
+						class="img-fluid position-relative z-1 rounded-4 ms-lg-n5 ms-md-n3">
+				</div>
+
+			</div>
+
+
+		</div>
+	</div>
+</section>
+
+
+<!-- About Us -->
+	<section class="py-lg-18 py-md-10 py-8" id="aboutus">
+	<div class="container">
+		<!--row-->
+		<div class="row d-flex align-items-center">
+			<div class="col-xl-5  col-md-6 col-lg-6 col-12">
+				<div class="p-3 mb-5 mb-md-0">
+					<!--image-->
+					<div class="position-relative">
+						<img src="./images/Laptop.jpeg" alt="about" 
+							class="img-fluid position-relative z-1 rounded-4 ms-lg-5 ms-3 ms-md-4">
+					</div>
+					<!--image-->
+				</div>
+			</div>
+			<!--col-->
+			<div class="col-xl-6 offset-xl-1  col-md-5 offset-md-1 col-lg-5 offset-lg-1 col-12">
+				<div class="">
+					<!--text-->
+					<!--title-->
+					<h2 class="mb-5">
+						About <span class="text-primary">Us</span>
+					</h2>
+					<p>At Tokyo Solutions, we are passionate about leveraging technology to drive business growth and innovation. 
+						With a focus on delivering high-quality, customized software solutions, we strive to exceed our clients' expectations. Our team of skilled professionals brings a wealth of experience and expertise to every project, ensuring that we meet the unique needs of each client.</p>
+					
+					<!--text-->
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 <!-- Footer -->
 	<footer class="py-5" id="footer" data-v-save-global="index.html,#footer">
 	<div class="container">
@@ -80,5 +148,4 @@
 
 </body>
 
-</html>
-
+</html>																														
