Added Meet the Team & Contact Us

--- a/index.html
+++ b/index.html
@@ -272,6 +272,220 @@
             </div>
         </section>
 
+        <!-- Meet the team -->
+			<section class="py-lg-18 py-md-10 py-8 bg-dark" id="ourteam">
+            <div class="container">
+                <!--row-->
+                <div class="row">
+                    <div class="col-xl-7 col-md-12  col-lg-8 col-12">
+                        <div class="mb-lg-8 mb-5">
+                            <!--text-->
+                            <h2 class="mb-4"> Meet the <span class="text-primary"> Team </span></h2>
+                            <p class="mb-0">Meet the talented team behind Tokyo Solutions, a group of dedicated professionals passionate about technology and innovation. 
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!--col-->
+                    <div class="col-xl-4 col-md-6 col-lg-4 col-12">
+                        <!--card start member 1--> 
+                        <div class="card mb-4 border-0">
+                            <!--card body-->
+                            <div class="card-body p-5">
+                                <div class="mb-3">
+                                    <!--text-->
+                                    <h5 class="mb-3">Abdul</h5>
+                                    <h4 class="mb-2 text-primary">Basit</h4>
+                                    <span>CEO</span>
+                                </div>
+                                <p class="mb-0">CEO of Tokyo Solutions expert in managing and handling management responsibilities of the overall agency. Being an experienced developer I also ensure smooth workflow of the overall Projects.
+                                </p>
+                                <!--text-->
+                            </div>
+                        </div>
+                        <!--card end-->
+                    </div>
+                    <!--col-->
+                    <div class="col-xl-4 col-md-6 col-lg-4 col-12">
+                        <!--card start-->
+                        <div class="card mb-4  border-0">
+                            <!--card body-->
+                            <div class="card-body p-5">
+                                <div class="mb-3">
+                                    <!--text-->
+                                    <h5 class="mb-3">Sumair</h5>
+                                    <h4 class="mb-2 text-primary">Ali</h4>
+                                    <span>COO</span>
+                                </div>
+                                <p class=" mb-0">COO of the company and responsible for the Data Related Queries of the corporation. Having experience in the Data Analytics Sumair Ali enable Tokyo Solutions to make valuable insights. 
+                                </p>
+                                <!--text-->
+                            </div>
+                        </div>
+                        <!--card end-->
+                    </div>
+
+					<div class="col-xl-4 col-md-6 col-lg-4 col-12">
+                        <!--card start-->
+                        <div class="card mb-4  border-0">
+                            <!--card body-->
+                            <div class="card-body p-5">
+                                <div class="mb-3">
+                                    <!--text-->
+                                    <h5 class="mb-3">Noor</h5>
+                                    <h4 class="mb-2 text-primary">Soomro</h4>
+                                    <span>CMO</span>
+                                </div>
+                                <p class=" mb-0">CMO of the corporation and expert in management capabilities, Noor helps Tokyo Solutions to progress in providing valuable services to its customers. 
+                                </p>
+                                <!--text-->
+                            </div>
+                        </div>
+                        <!--card end-->
+                    </div>
+
+                    <!--col-->
+                    <div class="col-xl-4 col-md-6  col-lg-4 col-12">
+                        <!--card-->
+                        <div class="card border-0 mb-4">
+                            <!--card-body-->
+                            <div class="card-body p-5">
+                                <div class="mb-3">
+                                    <!--text-->
+                                    <h5 class="mb-3">Mehak</h5>
+                                    <h4 class="mb-2 text-primary">Nizamani</h4>
+                                    <span>CTO</span>
+                                </div>
+                                <p class="mb-0">Mehek being the CTO of Tokyo Sol. also have expertise in Web Development and UI/UX Solution which plays an important role in the company.
+                                </p>
+                                <!--text-->
+                            </div>
+                        </div>
+                        <!--card end-->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+	<section class="py-lg-18 py-md-10 py-8" id="contactus" data-v-component-plugin-contact-form-form data-v-storage="database" data-v-name="contact-us-home">
+
+
+<!-- Contact us -->
+
+	<div class="container" id="contactus">
+		<!--row-->
+		<div class="row">
+			<div class="col-xl-8 offset-xl-2 col-md-12 col-lg-8 offset-lg-2 col-12">
+				<div class="text-center mb-5 mb-lg-8">
+					<!--text-->
+					<h2 class="mb-4">Contact <span class="text-primary">Us</span></h2>
+					<p class="mb-0">Contact us for any details or to get a qoute for your bussiness needs.</p>
+					<!--text-->
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xl-4 col-md-6 col-12">
+				<div>
+					<div class="d-flex mb-3">
+						<!--address-->
+						<h5 class="">
+							<span class="fw-bold text-primary">Address:</span>
+						</h5>
+						<p class="ms-3 mb-0">Room #221, Rashidi Hostel, Block Hostel, Mehran UET </p>
+
+					</div>
+					<div class="d-flex mb-3">
+						<!--phone-->
+						<h5 class="">
+							<span class="fw-bold text-primary">Phone:</span>
+						</h5>
+						<p class="mb-0 ms-3">  +92 333 33333333</p>
+
+					</div>
+					<div class="d-flex mb-3">
+						<!--email-->
+						<h5 class="">
+							<span class="fw-bold text-primary">E mail:</span>
+						</h5>
+						<p class="mb-0 ms-3">  memonbasit007@gmail.com</p>
+					</div>
+					<div class="d-flex">
+						<!--website-->
+						<h5>
+							<span class="fw-bold text-primary">Website:</span>
+						</h5>
+						<p class="'mb-0 ms-3">github.com/abdulBasit-exe</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-xl-6 offset-xl-2 col-md-6 col-12">
+				<div>
+
+	
+</div>
+					
+					<!--form-->
+					<form action="" method="post" >
+						<input type="hidden" class="form-control" placeholder="First name" name="firstname-empty">	
+						<!--row-->
+						<div class="row">
+							<!--col-->
+							<div class="col-lg-6">
+								<div class="mb-3">
+									<!--label-->
+									<label for="first-name-input"
+										class="form-label visually-hidden">First Name
+										address</label>
+									<!--input-->
+									<input type="text" name="firstname" class="form-control" id="first-name-input"
+										placeholder="First Name" required>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="mb-3">
+									<!--label-->
+									<label for="last-name-input"
+										class="form-label visually-hidden">Last Name
+										address</label>
+									<!--input-->
+									<input type="text" name="lastname" class="form-control" id="last-name-input"
+										placeholder="Last Name" required>
+								</div>
+							</div>
+							<div class="col-lg-12">
+								<div class="mb-3">
+									<!--label-->
+									<label for="exampleFormControlInput1"
+										class="form-label visually-hidden">Email
+										address</label>
+									<!--input-->
+									<input type="email"  name="email" class="form-control" id="email-input" placeholder="Email" required>
+								</div>
+							</div>
+							<!--col-->
+							<div class="col-lg-12">
+								<div class="mb-3">
+									<!--label-->
+									<label for="exampleFormControlTextarea1"
+										class="form-label visually-hidden">Example
+										textarea</label>
+									<!--textarea-->
+									<textarea class="form-control" name="message" id="message-input" rows="5" placeholder="Message"></textarea>
+								</div>
+							</div>
+						</div>
+						
+						<button class="btn btn-primary" type="submit" disabled>Coming Soon</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 
 <!-- Footer -->
 	<footer class="py-5" id="footer" data-v-save-global="index.html,#footer">
